make sure python can see custom libs

--- a/.openshift/action_hooks/pre_start_python-2.6
+++ b/.openshift/action_hooks/pre_start_python-2.6
@@ -12,3 +12,4 @@
 # prevent your application from stopping cleanly or starting at all.
 # Application start and stop is subject to different timeouts
 # throughout the system.
+export LD_LIBRARY_PATH="$HOME/app-root/data/gdb/lib:$HOME/app-root/repo/libs/lib:$LD_LIBRARY_PATH"
