make sure gdal can find data for reprojections/kml support

--- a/.openshift/action_hooks/pre_start_python-2.6
+++ b/.openshift/action_hooks/pre_start_python-2.6
@@ -12,4 +12,5 @@
 # prevent your application from stopping cleanly or starting at all.
 # Application start and stop is subject to different timeouts
 # throughout the system.
+export GDAL_DATA="$HOME/app-root/repo/libs/share/gdal"
 export LD_LIBRARY_PATH="$HOME/app-root/data/gdb/lib:$HOME/app-root/repo/libs/lib:$LD_LIBRARY_PATH"
